@@ -104,8 +104,10 @@ contains
     status = nf90_inq_varid(NCO%id,'level',varid)
     status=nf90_put_var(NCO%id,varid,model%numerics%sigma)
     call nc_errorhandle(__FILE__,__LINE__,status)
-    status = nf90_inq_varid(NCO%id,'lithoz',varid)
-    status=nf90_put_var(NCO%id,varid,model%lithot%deltaz)
-    call nc_errorhandle(__FILE__,__LINE__,status)
+    if (model%options%gthf.gt.0) then
+       status = nf90_inq_varid(NCO%id,'lithoz',varid)
+       status=nf90_put_var(NCO%id,varid,model%lithot%deltaz)
+       call nc_errorhandle(__FILE__,__LINE__,status)
+    end if
   end subroutine glide_nc_filldvars
 end module glide_nc_custom
